# Psypher-AI-Threat-Assessor

./: .gitignore  PSYPHER-CHANGELOG.md  PSYPHER-DEVELOPER-MANUAL.md  PSYPHER-FULL-POCKET-MANUAL.md  PSYPHER-POCKET-MANUAL.md  PSYPHER-USER-MANUAL.md  README.md  USER-MANUAL.md  assessor.yaml  assessor.yaml.clean  blackbox-run.sh  build_d3fend_cwe_slice.py  bundle-repo.sh  clean.sh  dump_source.sh  flatten-repo.sh  psypher-brand.sh  psypher-claude-instructions.txt  psypher-hop.sh  psypher-prompts.txt  psypher-source-dump.md  pyproject.toml  requirements.txt  run.sh  selfcheck.sh  setkey.sh  setmodel.sh  template_instructions_assessor.yalm
data/: d3fend_extract.py  distro_index.py  fetch.sh  kev_build.py  nvd-build.sh  nvd_index.py  relevance_build.py
data/cve/: host-linux.json  ml-serving.json
data/d3fend/: cwe-countermeasures.json
data/kev/: kev.json
engine/: __init__.py  __main__.py  relevance.py
engine/analysis/: __init__.py  analyze.py  brain.py  defense.py  killchain.py  match.py  phase.py  policy.py  posture.py  validate.py
engine/core/: __init__.py  banner.py  config.py  contracts.py  evidence_log.py  loader.py  models.py  orchestrate.py  prompts.py  validation.py
engine/discovery/: __init__.py  approval.py  harness.py  parse.py  phase.py  strategy.py
engine/graph/: __init__.py  canonical.py  cve.py  cwe.py  d3fend.py  enrich.py  phase.py  promote.py  stix.py  store.py
engine/report/: html.py  (+8 more)
flatten_20260709_201505/: MANIFEST.txt  TREE.txt  psypher-assessor_flat_20260709_201505.txt
tests/: __init__.py  system_test.py  verify.py  verify_labels.py
(+48 files in other folders)
